(fix) Corrección de ortografía

--- a/public/bitacora.html
+++ b/public/bitacora.html
@@ -77,7 +77,7 @@
               <input type="text" id="txtExtra"><br>
             </div>
             <div class="donalmacen">
-              <label for="txtelec" id="lblElec">Sera almacenado o donado</label>
+              <label for="txtEstado" id="lblElec">¿Será almacenado o donado?</label>
               <select name="" id="txtEstado">
                 <option value="1" checked>Donación</option>
                 <option value="0">almacenado</option>
