Se modifica form de solicitud de traslado de usuario y descripcion del boton

--- a/public/formTransferAdmin.html
+++ b/public/formTransferAdmin.html
@@ -121,7 +121,7 @@
         </div>
       </div>
       <div>
-        <button class="buttons" type="button" id="btnSubmit" onclick="Validate()">Enviar</button>
+        <button class="buttons" type="button" id="btnSubmit" onclick="Validate()">Realizar Traslado</button>
         <button class="buttons" type="button">Eliminar</button>
       </div>
       </div>
