--- a/public/formTransferUser.html
+++ b/public/formTransferUser.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Traslados</title>
+  <title>Solicitud de traslados</title>
   <link rel="icon" type="" href="img/proveguard-low-resolution-logo-color-on-transparent-background.png" />
   <link href="css/reset.css" rel="stylesheet" />
   <link href="css/general.css" rel="stylesheet" />
@@ -39,7 +39,7 @@
     <div class="center-container" />
 
     <form action="">
-      <h3 class="subtitles">SOLICITUD DE TRASLADO DE ACTIVO</h3>
+      <h3 class="subtitles">Solicitud de traslado de Activo</h3>
       <div class="row">
         <div class="column">
           <div>
@@ -120,7 +120,7 @@
         </div>
       </div>
       <div>
-        <button class="buttons" type="button" id="btnSubmit" onclick="Validate()">Enviar</button>
+        <button class="buttons" type="button" id="btnSubmit" onclick="Validate()">Enviar Solicitud</button>
         <button class="buttons" type="button">Eliminar</button>
       </div>
       </div>
@@ -150,7 +150,6 @@
   <script src="js/utils.js"></script>
   <script src="js/Services/generalService.js"></script>
   <script src="js/Controllers/sessionController.js"></script>
-  <script src="js/Controllers/transfersController.js"></script>
 </body>
 
 </html>
