--- a/public/editProfile.html
+++ b/public/editProfile.html
@@ -47,7 +47,7 @@
 
     <main>
       <div class="container edit-button">
-        <button type="button" class="buttons" onclick="EditProfile()">
+        <button type="button" class="buttons" onclick="EnableButtons()">
           Editar
         </button>
       </div>
@@ -66,6 +66,10 @@
       </div>
       <div class="container info">
         <h2 class="subtitles">Informacion del usuario</h2>
+        <div class="inputs hidden">
+          <label for="mongoId">_id</label>
+          <input type="text" id="mongoId" />
+        </div>
         <div class="inputs">
           <label for="txt-id">Identificación</label>
           <input type="text" id="txt-id" />
@@ -93,14 +97,6 @@
         <div class="inputs">
           <label for="txt-new-pass">Contraseña nueva</label>
           <input type="password" id="txt-new-pass" />
-        </div>
-        <div class="inputs">
-          <label for="txt-new-pass-confim">Confirmar Contraseña</label>
-          <input type="password" id="txt-new-pass-confim" />
-        </div>
-        <div class="inputs">
-          <label for="txt-number">Telefono</label>
-          <input type="text" id="txt-number" />
         </div>
         <div class="inputs">
           <label for="txt-birthday">Fecha de nacimiento</label>
@@ -137,12 +133,12 @@
       </div>
       <div class="copyright">
         <h2>SICA - Sistema de Control de Activos</h2>
-        <h2><a href="landpageEquipo.html">BotWeb Team</a></h2>
+        <h2><a href="landpageBotweb.html">BotWeb Team</a></h2>
       </div>
       <ul class="nav-links">
-        <li><a href="#">Contacto</a></li>
-        <li><a href="#">Sedes</a></li>
-        <li><a href="#">Ayuda</a></li>
+        <li><a href="landpageBotweb.html">Contacto</a></li>
+        <li><a href="sede.html">Sedes</a></li>
+        <li><a href="landpageBotweb.html">Ayuda</a></li>
       </ul>
     </footer>
 
