--- a/public/forgotPass.html
+++ b/public/forgotPass.html
@@ -27,8 +27,8 @@
       </div>
       <nav>
         <ul class="nav-links">
-          <li><a href="#">Contacto</a></li>
-          <li><a href="#">Ayuda</a></li>
+          <li><a href="landpageBotweb.html">Contacto</a></li>
+          <li><a href="landpageBotweb.html">Ayuda</a></li>
         </ul>
       </nav>
     </header>
@@ -55,7 +55,7 @@
 
     <footer class="footer">
       <div class="copyright">
-        <h2><a href="landpageEquipo.html">BotWeb Team</a></h2>
+        <h2><a href="landpageBotweb.html">BotWeb Team</a></h2>
         <h2>ProveGuard &copy;2023</h2>
       </div>
     </footer>
