--- a/public/historialDonacion.html
+++ b/public/historialDonacion.html
@@ -30,7 +30,7 @@
               >Registro / Edición de activos</a
             >
           </li>
-          <li><a href="transferIncome.html">Traslados</a></li> 
+          <li><a href="transferIncome.html">Traslados</a></li>
           <li><a href="bitacora.html">Bitácora</a></li>
           <li><a href="reportes.html">Reportes</a></li>
           <li><a href="users.html">Manejo de usuarios</a></li>
@@ -65,12 +65,12 @@
     </div>
     <div class="copyright">
       <h2>SICA - Sistema de Control de Activos</h2>
-      <h2><a href="landpageEquipo.html">BotWeb Team</a></h2>
+      <h2><a href="landpageBotweb.html">BotWeb Team</a></h2>
     </div>
     <ul class="nav-links">
-      <li><a href="#">Contacto</a></li>
-      <li><a href="#">Sedes</a></li>
-      <li><a href="#">Ayuda</a></li>
+      <li><a href="landpageBotweb.html">Contacto</a></li>
+      <li><a href="sede.html">Sedes</a></li>
+      <li><a href="landpageBotweb.html">Ayuda</a></li>
     </ul>
   </footer>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
