--- a/public/ingresoRegistroActivosAdmin.html
+++ b/public/ingresoRegistroActivosAdmin.html
@@ -51,10 +51,18 @@
         <h2>Registro / Edicion de activos</h2>
         <br />
         <div>
-          <button type="button" class="buttons" onclick="window.location.href='registroDeActivosAdmin.html'">
+          <button
+            type="button"
+            class="buttons"
+            onclick="window.location.href='registroDeActivosAdmin.html'"
+          >
             Registrar activos
           </button>
-          <button type="button" class="buttons" onclick="window.location.href='estadoDeRegistro.html'">
+          <button
+            type="button"
+            class="buttons"
+            onclick="window.location.href='estadoDeRegistro.html'"
+          >
             Solicitudes de registro
           </button>
         </div>
@@ -66,12 +74,12 @@
       </div>
       <div class="copyright">
         <h2>SICA - Sistema de Control de Activos</h2>
-        <h2>BotWeb Team</h2>
+        <h2><a href="landpageBotweb.html">BotWeb Team</a></h2>
       </div>
       <ul class="nav-links">
-        <li><a href="#">Contacto</a></li>
-        <li><a href="#">Sedes</a></li>
-        <li><a href="#">Ayuda</a></li>
+        <li><a href="landpageBotweb.html">Contacto</a></li>
+        <li><a href="sede.html">Sedes</a></li>
+        <li><a href="landpageBotweb.html">Ayuda</a></li>
       </ul>
     </footer>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
