--- a/public/formTransferAdmin.html
+++ b/public/formTransferAdmin.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Traslados</title>
+  <title>SICA - Traslados</title>
   <link rel="icon" type="" href="img/proveguard-low-resolution-logo-color-on-transparent-background.png" />
   <link href="css/reset.css" rel="stylesheet" />
   <link href="css/general.css" rel="stylesheet" />
