--- a/public/registroDeActivosAdmin.html
+++ b/public/registroDeActivosAdmin.html
@@ -55,10 +55,10 @@
             <label for="txtSede">Seleccione la sede</label>
             <select id="txtSede">
               <option value="">--Seleccione una opción--</option>
-              <option value="1">Central</option>
-              <option value="2">Heredia</option>
-              <option value="3">Alajuela</option>
-              <option value="4">Cartago</option>
+              <option value="Central">Central</option>
+              <option value="Heredia">Heredia</option>
+              <option value="Alajuela">Alajuela</option>
+              <option value="Cartago">Cartago</option>
             </select>
           </div>
           <div class="inputs">
