Crear request para traslado de activos

--- a/public/formTransferAdmin.html
+++ b/public/formTransferAdmin.html
@@ -59,7 +59,7 @@
             <fieldset id="txtReason">
               <legend id="lblReason">Razón de traslado</legend>
               <label for="rbtActivoDanado" class="container">Activo dañado
-                <input type="radio" id="rbtActivoDanado" value="ActivoDanado" name="rbtReason">
+                <input type="radio" id="rbtActivoDanado" value="Danado" name="rbtReason">
                 <span class="checkmark"></span>
               </label>
               <label for="rbtActivoDesuso" class="container">Activo en Desuso
