--- a/public/formTransferAdmin.html
+++ b/public/formTransferAdmin.html
@@ -59,11 +59,11 @@
             <fieldset id="txtReason">
               <legend id="lblReason">Razón de traslado</legend>
               <label for="rbtActivoDanado" class="container">Activo dañado
-                <input type="radio" id="rbtActivoDanado" value="Danado" name="rbtReason">
+                <input type="radio" id="rbtActivoDanado" value="Activo dañado" name="rbtReason">
                 <span class="checkmark"></span>
               </label>
               <label for="rbtActivoDesuso" class="container">Activo en Desuso
-                <input type="radio" id="rbtActivoDesuso" value="Desuso" name="rbtReason">
+                <input type="radio" id="rbtActivoDesuso" value="Activo en desuso" name="rbtReason">
                 <span class="checkmark"></span>
               </label>
               <label for="rbtOtro" class="container">Otro
