LandPage ProveGuard + modificación de footer

--- a/public/landPageBotWeb.html
+++ b/public/landPageBotWeb.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BotWeb</title>
-    <link rel="icon" type="" href="img/logoSinFondo.png" />
-    <link rel="stylesheet" href="./css/landPage.css">
+    <link rel="icon" type="" href="./img/logoSinFondo.png" />
+    <link rel="stylesheet" href="./css/landPageBotWeb.css">
 </head>
 <body>
     <header>
         <nav>
-            <img src="img/logoSinFondo.png" class="logo">
+            <img src="./img/logoSinFondo.png" class="logo">
             <a href="#nosotros">Nosotros</a>
             <a href="#porqueBotWeb">¿Por qué BotWeb?</a>
             <a href="#conversamos">¿Conversamos?</a>
@@ -114,7 +114,7 @@
 
         <div id="porqueBotWeb">
             <h2 >¿Por qué BotWeb?</h2>
-            <p class="texto">Entre nuestras creaciones se encuentra <a href="../public/login.html">SICA</a>, un sistema enfocado para el control de activos 
+            <p class="texto">Entre nuestras creaciones se encuentra <a href="login.html">SICA</a>, un sistema enfocado para el control de activos 
                 para <a href="">ProveGuard</a> una empresa la cual ofrece servicios para el desarrollo social. </p>
 
 
