--- a/public/landPageProveGuard.html
+++ b/public/landPageProveGuard.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProveGuard</title>
-    <link rel="icon" type="" href="../public/img/proveguard-low-resolution-logo-color-on-transparent-background.png" />
-    <link rel="stylesheet" href="landPage_ProveGuard.css">
+    <link rel="icon" type="" href="./img/proveguard-low-resolution-logo-color-on-transparent-background.png" />
+    <link rel="stylesheet" href="./css/landPage_ProveGuard.css">
 </head>
 <body>
     <header>
         <nav>
-            <img src="../public/img/proveguard-low-resolution-logo-color-on-transparent-background.png" class="logo"/>
+            <img src="./img/proveguard-low-resolution-logo-color-on-transparent-background.png" class="logo"/>
             <a href="#nosotros">Nosotros</a>
             <a href="#servicios">Servicios</a>
             <a href="#conversamos">Contacto</a>
@@ -118,8 +118,8 @@
             Correo: contacto@proveguard.com</br></p>         
         </div>
 
-        <p>©Copyright 2023 |  <a href="../Landing Page Botweb /LandPage.html">BotWeb Team</a></p>
-        <p> <a href="../public/login.html">SICA</a></p>
+        <p>©Copyright 2023 |  <a href="./landPageBotWeb.html">BotWeb Team</a></p>
+        <p> <a href="./login.html">SICA</a></p>
     </footer>
 </body>
 </html>
