--- a/public/forgotPass.html
+++ b/public/forgotPass.html
@@ -55,8 +55,8 @@
 
     <footer class="footer">
       <div class="copyright">
-        <h2><a href="../Landing Page Botweb /LandPage.html">BotWeb Team</a></h2>
-        <h2>ProveGuard &copy;2023</h2>
+        <h2><a href="./landPageBotWeb.html">BotWeb Team</a></h2>
+        <h2><a href="./landPageProveGuard.html">ProveGuard &copy;2023</a></h2>
       </div>
     </footer>
 
