--- a/public/login.html
+++ b/public/login.html
@@ -27,8 +27,8 @@
       </div>
       <nav>
         <ul class="nav-links">
-          <li><a href="../Landing Page Botweb /LandPage.html">Contacto</a></li>
-          <li><a href="../Landing Page Botweb /LandPage.html">Ayuda</a></li>
+          <li><a href="./landPageBotWeb.html">Contacto</a></li>
+          <li><a href="./landPageBotWeb.html">Ayuda</a></li>
         </ul>
       </nav>
     </header>
@@ -57,8 +57,8 @@
 
     <footer class="footer">
       <div class="copyright">
-        <h2><a href="../Landing Page Botweb /LandPage.html">BotWeb Team</a></h2>
-        <h2>ProveGuard &copy;2023</h2>
+        <h2><a href="./landPageBotWeb.html">BotWeb Team</a></h2>
+        <h2><a href="./landPageBotWeb.html">ProveGuard &copy;2023</a></h2>
       </div>
     </footer>
 
