--- a/public/transferIncome.html
+++ b/public/transferIncome.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SICA - Solicitud / Estado de Traslados</title>
-  <link rel="icon" type="" href="img/proveguard-low-resolution-logo-color-on-transparent-background.png" />
+  <link rel="icon" type="" href="img/proveguard-low-resolution-logo-color-on-transparent-background.png"/>
   <link href="css/reset.css" rel="stylesheet" />
   <link href="css/general.css" rel="stylesheet" />
   <link rel="stylesheet" href="css/ingresoRegistroActivosUsuario.css" />
@@ -58,16 +58,16 @@
 
   <footer class="footer">
     <div class="company-name">
-      <h2>ProveGuard &copy;2023</h2>
+      <h2><a href="./landPageProveGuard.html">ProveGuard &copy;2023</a></h2>
     </div>
     <div class="copyright">
       <h2>SICA - Sistema de Control de Activos</h2>
-      <h2> <a href="../Landing Page Botweb /LandPage.html">BotWeb Team</a></h2>
+      <h2> <a href="./landPageBotWeb.html">BotWeb Team</a></h2>
     </div>
     <ul class="nav-links">
-      <li><a href="../Landing Page Botweb /LandPage.html">Contacto</a></li>
+      <li><a href="./landPageBotWeb.html">Contacto</a></li>
       <li><a href="./sede.html">Sedes</a></li>
-      <li><a href="../Landing Page Botweb /LandPage.html">Ayuda</a></li>
+      <li><a href="./landPageBotWeb.html">Ayuda</a></li>
     </ul>
   </footer>
 
