(fix): Links a diferentes paginas corregidas

--- a/public/bitacora.html
+++ b/public/bitacora.html
@@ -20,7 +20,7 @@
     <nav>
       <ul class="nav-links">
         <li><a href="registroDeActivosAdmin.html">Registro / Edición de activos</a></li>
-        <li><a href="formularioTraslados.html">Traslados</a></li>
+        <li><a href="transferIncomeAdmin.html">Traslados</a></li>
         <li><a href="Bitacora.html">Bitácora</a></li>
         <li><a href="reportes.html">Reportes</a></li>
         <li><a href="users.html">Manejo de usuarios</a></li>
@@ -29,9 +29,6 @@
     <div class="left-nav">
       <div id="user-icon" class="logo user-icon" title="Perfil">
         <img src="img/user-icon.png" alt="user-icon" />
-      </div>
-      <div class="logo search-icon" title="Buscar">
-        <img src="img/search-interface-symbol.png" alt="user-icon" />
       </div>
       <button type="button" class="buttons" onclick="Logout()">
         Cerrar Sesión
@@ -119,7 +116,9 @@
 
   <footer class="footer">
     <div class="company-name">
-      <h2>ProveGuard &copy;2023</h2>
+      <a href="landPageProveGuard.html">
+        <h2>ProveGuard &copy;2023</h2>
+      </a>
     </div>
     <div class="copyright">
       <h2>SICA - Sistema de Control de Activos</h2>
