--- a/public/transferIncomeAdmin.html
+++ b/public/transferIncomeAdmin.html
@@ -55,16 +55,18 @@
 
   <footer class="footer">
     <div class="company-name">
-      <h2>ProveGuard &copy;2023</h2>
+      <a href="landPageProveGuard.html">
+        <h2>ProveGuard &copy;2023</h2>
+      </a>
     </div>
     <div class="copyright">
       <h2>SICA - Sistema de Control de Activos</h2>
       <h2>BotWeb Team</h2>
     </div>
     <ul class="nav-links">
-      <li><a href="#">Contacto</a></li>
-      <li><a href="#">Sedes</a></li>
-      <li><a href="#">Ayuda</a></li>
+      <li><a href="landPageBotWeb.html">Contacto</a></li>
+      <li><a href="sede.html">Sedes</a></li>
+      <li><a href="landPageBotWeb.html">Ayuda</a></li>
     </ul>
   </footer>
 
