--- a/public/transferIncome.html
+++ b/public/transferIncome.html
@@ -8,8 +8,9 @@
   <title>SICA - Solicitud / Estado de Traslados</title>
   <link rel="icon" type="" href="img/proveguard-low-resolution-logo-color-on-transparent-background.png"/>
   <link href="css/reset.css" rel="stylesheet" />
+  <link href="css/users.css" rel="stylesheet" />
   <link href="css/general.css" rel="stylesheet" />
-  <link rel="stylesheet" href="css/transferIncome.css" />
+  <link href="css/transferIncome.css" rel="stylesheet"/>
 </head>
 
 <body>
@@ -54,7 +55,7 @@
 
   <footer class="footer">
     <div class="company-name">
-      <h2><a href="./landPageProveGuard.html">ProveGuard &copy;2023</a></h2>
+      <h2><a href="landPageProveGuard.html">ProveGuard &copy;2023</a></h2>
     </div>
     <div class="copyright">
       <h2>SICA - Sistema de Control de Activos</h2>
