--- a/public/bitacora.html
+++ b/public/bitacora.html
@@ -116,9 +116,7 @@
 
   <footer class="footer">
     <div class="company-name">
-      <a href="landPageProveGuard.html">
-        <h2>ProveGuard &copy;2023</h2>
-      </a>
+      <h2><a href="landPageProveGuard.html">ProveGuard &copy;2023</a></h2>
     </div>
     <div class="copyright">
       <h2>SICA - Sistema de Control de Activos</h2>
