--- a/public/historialTraslados.html
+++ b/public/historialTraslados.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SICA-Reportes</title>
+    <title>SICA-Historial de Traslados</title>
     <link
       rel="icon"
       type=""
@@ -12,7 +12,7 @@
     />
     <link href="css/reset.css" rel="stylesheet" />
     <link href="css/general.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/reportes.css" />
+    <link rel="stylesheet" href="css/historiales.css" />
   </head>
 
   <body>
@@ -46,52 +46,45 @@
       </div>
     </header>
     <main>
-      <div class="subtitles">
-        <br /><br />
-        <h2>Reportes</h2>
-        <br />
+      <br /><br />
+      <h2 class="subtitles">Historial de Traslados</h2>
+      <br />
+      <div>
         <div>
-          <button
-            type="button"
-            class="buttons"
-            onclick="window.location.href='historialActivos.html'"
-          >
-            Historial de activos
-          </button>
-          <button
-          type="button"
-          class="buttons"
-          onclick="window.location.href='historialTraslados.html'"
-        >
-          Historial de traslados
-        </button>
-          <button
-            type="button"
-            class="buttons"
-            onclick="window.location.href='historialUnidad.html'"
-          >
-            Historial de Sede
-          </button>
-          <button
-          type="button"
-          class="buttons"
-          onclick="window.location.href='historialUsuario.html'">
-          Historial de Usuarios
-          </button>
-          <button
-          type="button"
-          class="buttons"
-          onclick="window.location.href='historialDonaciones.html'">
-          Historial de Donaciones
-          </button>
-          <button
-          type="button"
-          class="buttons"
-          onclick="window.location.href='historialBodega.html'">
-          Historial de Bodega
-          </button>
+          <label for="selecOpcion">Filtrar por:</label>
+          <select class="buscador" id="selecOpcion">
+            <option value="">--Selecione una opción--</option>
+            <option value="idTraslado">ID de traslado</option>
+            <option value="idActivo">ID de activo</option>
+            <option value="usuarioSolicitante">Usuario solicitante</option>
+            <option value="sede">Sede</option>
+            <option value="estado">Estado</option>
+            <option value="codigo">Código</option>
+            <option value="razon">Razón de traslado</option>
+          </select>
+        </div>
+        <div class="inputs">
+          <label for="txtBuscar">Parámetros de búsqueda</label>
+          <input type="text" class="buscador" id="txtBuscar" />
+        </div>
+        <div class="botonBuscar">
+          <button type="button" class="buttons">Buscar</button>
         </div>
       </div>
+      <table id="tableHistorialTraslados">
+        <thead>
+          <tr>
+            <th>ID de traslado</th>
+            <th>ID de activo</th>
+            <th>Usuario solicitante</th>
+            <th>Sede</th>
+            <th>Estado</th>
+            <th>Código</th>
+            <th>Razón de traslado</th>
+          </tr>
+        </thead>
+        <tbody id="table-body"></tbody>
+      </table>
     </main>
     <footer class="footer">
       <div class="company-name">
