--- a/public/editProfile.html
+++ b/public/editProfile.html
@@ -65,7 +65,7 @@
         </button>
       </div>
       <div class="container info">
-        <h2 class="subtitles">Informacion del usuario</h2>
+        <h2 class="subtitles">Información del usuario</h2>
         <div class="inputs hidden">
           <label for="mongoId">_id</label>
           <input type="text" id="mongoId" />
@@ -105,9 +105,9 @@
         <div class="inputs">
           <label for="txt-rol">Rol</label>
           <select id="txt-rol">
-            <option value="">--Seleccione una opcion--</option>
+            <option value="">--Seleccione una opción--</option>
             <option value="1">Administrador</option>
-            <option value="2">Proveeduria</option>
+            <option value="2">Proveeduría</option>
             <option value="3">Encargado bodega</option>
           </select>
         </div>
