--- a/public/estadoDeRegistro.html
+++ b/public/estadoDeRegistro.html
@@ -64,9 +64,9 @@
             <th>ID del activo</th>
             <th>Nombre</th>
             <th>Unidad</th>
-            <th>Ubicacion</th>
-            <th>Codigo Ubicacion</th>
-            <th>Descripcion</th>
+            <th>Ubicación</th>
+            <th>Código Ubicacion</th>
+            <th>Descripción</th>
             <th>Usuario solicitante</th>
             <th>Fecha</th>
             <th>Estado</th>
