--- a/public/estadoDeSolicitudesUsuario.html
+++ b/public/estadoDeSolicitudesUsuario.html
@@ -65,7 +65,7 @@
             <th>Estado</th>
             <th>Fecha</th>
             <th>Usuario</th>
-            <th>Codigo</th>
+            <th>Código</th>
           </tr>
         </thead>
         <tbody id="table-body"></tbody>
