--- a/public/formTransferUser.html
+++ b/public/formTransferUser.html
@@ -92,9 +92,9 @@
             <select name="" id="txtCampus">
               <option value=""></option>
               <option value="">--Seleccione una opción--</option>
-              <option value="1">Sede de bodega</option>
-              <option value="2">Sede de donaciones</option>
-              <option value="3">Sede prinicpal</option>
+              <option value="1">Sede de Bodega</option>
+              <option value="2">Sede de Donaciones</option>
+              <option value="3">Sede Prinicpal</option>
               <option value="4">Sede de Heredia</option>
             </select>
 
