--- a/public/users.html
+++ b/public/users.html
@@ -79,7 +79,7 @@
             <label for="txtIDType">Tipo de Identificación</label>
             <select id="txtIDType">
               <option value="">--Seleccione una opción--</option>
-              <option value="1">Fisica</option>
+              <option value="1">Física</option>
               <option value="2">Extranjeros</option>
             </select>
           </div>
