--- a/public/estadoTrasladoAdmin.html
+++ b/public/estadoTrasladoAdmin.html
@@ -64,8 +64,8 @@
             <th>ID de la solicitud</th>
             <th>ID del Activo afectado</th>
             <th>Razon de traslado</th>
-            <th>Imagenes</th>
-            <th>Fecha de creacion</th>
+            <th>Imágenes</th>
+            <th>Fecha de creación</th>
             <th>Solicitante</th>
             <th>Estado de solicitud</th>
             <th>Acciones</th>
