--- a/public/forgotPass.html
+++ b/public/forgotPass.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>SICA - Olvide mi contraseña</title>
+    <title>SICA - Olvidé mi contraseña</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
