--- a/public/registroDeActivosAdmin.html
+++ b/public/registroDeActivosAdmin.html
@@ -66,7 +66,7 @@
             <input type="text" id="txtNomActivo" />
           </div>
           <div class="inputs">
-            <label for="txtUbActivo">Ubicacion del activo</label>
+            <label for="txtUbActivo">Ubicación del activo</label>
             <input type="text" id="txtUbActivo" />
           </div>
           <div>
