--- a/public/registroDeActivosUsuario.html
+++ b/public/registroDeActivosUsuario.html
@@ -65,7 +65,7 @@
             <input type="text" id="txtNomActivo" />
           </div>
           <div class="inputs">
-            <label for="txtUbActivo">Ubicacion del activo</label>
+            <label for="txtUbActivo">Ubicación del activo</label>
             <input type="text" id="txtUbActivo" />
           </div>
           <div class="inputs">
