Conflictos resueltos y se agrega bitacoraController.js

--- a/public/bitacora.html
+++ b/public/bitacora.html
@@ -101,6 +101,7 @@
 
     <script src="js/utils.js"></script>
     <script src="js/Services/generalService.js"></script>
+    <script src="js/Controllers/bitacoraController.js"></script>
     <script src="js/Controllers/sessionController.js"></script>
   </body>
 </html>
