Backend de Historial de Activos, hace falta ver el tema del Rol y la funcionalidad de filtrar

--- a/public/historialActivos.html
+++ b/public/historialActivos.html
@@ -58,8 +58,7 @@
             <option value="nombre">Nombre</option>
             <option value="codigo">Código</option>
             <option value="descripcion">Descripción</option>
-            <option value="fecha">Fecha de creación</option>
-            <option value="estado">Estado</option>
+            <option value="sede">Sede</option>
           </select>
         </div>
         <div class="inputs">
@@ -77,8 +76,7 @@
             <th>Nombre</th>
             <th>Descripción</th>
             <th>Código</th>
-            <th>Fecha de creación</th>
-            <th>Estado</th>
+            <th>Sede</th>
           </tr>
         </thead>
         <tbody id="table-body"></tbody>
@@ -104,5 +102,6 @@
     <script src="js/utils.js"></script>
     <script src="js/Services/generalService.js"></script>
     <script src="js/Controllers/sessionController.js"></script>
+    <script src="js/Controllers/historialActivos.js"></script>
   </body>
 </html>
